--- a/style/index.css
+++ b/style/index.css
@@ -1,16 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,600&family=Inter:wght@300&family=Luxurious+Script&family=M+PLUS+Code+Latin&family=Merriweather&family=Mohave:wght@600&family=Montagu+Slab&family=Nunito:ital@1&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,300;1,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,400&display=swap');
 body{
-    font-family: 'Shadows';
-    font-style: italic;
-    font-weight: 800;
+    /* font-family: 'Shadows'; */
+    /* font-style: italic; */
+    font-weight: 500;
     background-image: url("https://res.cloudinary.com/dw4dh7nkd/image/upload/v1642310410/bla/prince_uhze9q.png");
     background-size: cover;
 }
-#prince{
-    color: #ec5b08;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: larger;
-    font-weight: 800;
-    font-style: oblique;
+nav{
+    padding-right: 5%;
+}
+nav .nav-item{
+    font-family: 'Poppins', sans-serif;
+}
+nav a{
+    text-decoration: none;
 }
 #shop{
     color: black;
@@ -25,11 +28,11 @@ body{
     color:black;
 }
 #youtube{
-    color:black;
+    color:white;
     font-size: 180%;
 }
 #facebook{
-    color:black;
+    color:white;
     font-size: 180%;
 }
 .slider{
@@ -67,6 +70,9 @@ body{
 } 
 div.footer{
     width: 100%;
-    height: 60px;
-    background-color: rgb(255, 255, 255);
+    height: auto;
+    background-color: black;
+}
+.footer a{
+    text-decoration: none;
 }
