--- a/style/shop.css
+++ b/style/shop.css
@@ -22,12 +22,41 @@ nav a{
 }
 /* ============Container============== */
 #cont{
-    
     border-radius: 8px;
     box-shadow: 2px 1px 18px 10px  rgb(210, 213, 210);
 }
-/* ==========Banner========== */
+#cont #card{
+    padding-top: 2%;
+    border-radius: 5px;
+}
+#cont #card:hover{
+    box-shadow: 2px 1px 18px 10px  rgb(210, 213, 210);
+    transition: all .5s ease-in;
+}
+#cont img{
+    border-radius: 5px;
+}
+#cont h4{
+    text-align: center;
+}
+#cont .btn{
+    width: 40%;
+    background-color: coral;
+    color: white;
+    margin-bottom: 1%;
+    border: 1px solid coral;
+}
+#cont .btn:hover{
+    color: coral;
+    background-color: white;
+    border: 1px solid coral;
+    transition: all .5s ease;
+}
 
+/* ==========Banner========== */
+#wrapper {
+    margin-top: 8%;
+}
 /* =======footer======== */
 #youtube{
     color:white;
