--- a/style/crown.css
+++ b/style/crown.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,600&family=Inter:wght@300&family=Luxurious+Script&family=M+PLUS+Code+Latin&family=Merriweather&family=Mohave:wght@600&family=Montagu+Slab&family=Nunito:ital@1&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,300;1,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,400&display=swap');
+
 nav{
     padding-right: 5%;
+    box-shadow: 2px 1px 18px 10px  rgb(210, 213, 210);
 }
 nav .nav-item{
     font-family: 'Poppins', sans-serif;
@@ -19,9 +22,52 @@ nav a{
 #cart{
     color:black;
 }
+/* ============CARDS 1 ============ */
+#main{
+    max-width: 80%;
+    margin: 2% auto;
+    display: flex;
+    flex-direction: row;
+}
+.cards1{
+    width: 20%;
+    height:140vh ;
+}
+
+.column img:hover{
+    border: 2px solid black;
+}
+/* ===========CARDS 3 ======== */
+#size{
+    display: flex;
+    flex-direction: row;
+}
+#cont-size{
+    border-radius: 5px;
+    border: 3px solid rgba(221, 221, 221, 0.836);
+}
+#cont-size p{
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    border-radius: 2px;
+    background-color: rgba(221, 221, 221, 0.836);
+}
+#cont-size #size{
+    text-align: center;
+}
+#size li{
+    list-style: none;
+    padding: 4%;
+    margin: 2%;
+}
+#size li:hover{
+    border-radius:50rem;
+    border: 3px solid coral;
+    transition: all .5s ease;
+}
 /* ==========Banner========== */
 #wrapper {
-    margin-top: 8%;
+    margin-top: 4%;
 }
 /* =======footer======== */
 #youtube{
