--- a/style/shop.css
+++ b/style/shop.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,600&family=Inter:wght@300&family=Luxurious+Script&family=M+PLUS+Code+Latin&family=Merriweather&family=Mohave:wght@600&family=Montagu+Slab&family=Nunito:ital@1&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,300;1,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,400&display=swap');
+
 /* ================NAVBAR============= */
 nav{
     padding-right: 5%;
@@ -28,6 +30,7 @@ nav a{
 #cont #card{
     padding-top: 2%;
     border-radius: 5px;
+    position: relative;
 }
 #cont #card:hover{
     box-shadow: 2px 1px 18px 10px  rgb(210, 213, 210);
