configurando funcionamiento de carrito y local storage de el resto de paginas individuales

--- a/style/pose.css
+++ b/style/pose.css
@@ -22,40 +22,32 @@ nav a{
 #cart{
     color:black;
 }
-/* ========MODAL============ */
-#popup{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.199);
-    transition: opacity .5s;
-    visibility: hidden;
-    opacity: 0;
-}
-#popup:target{
-    visibility: visible;
-    opacity: 1;
-}
+/* =====MODAL======== */
 #body{
     width: 45%;
     padding: 2%;
     border-radius: 2px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     overflow-y: scroll;
     position: relative;
-    margin: 4.8% 54% auto;
+    margin-left:60vw;
+    margin-top: auto;
+    height: 90vh;
     transition: all 2s ease-in-out;
 }
 #cerrar{
     position: absolute;
     right: 5%;
-    text-decoration: none;
     color: black;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     font-weight: bold;
-    transition: all .5s;
+}
+.modal-deader{
+    display: flex;
+    flex-direction: row;
+    margin-right: 40%;
+    text-align: start;
+    justify-content: start;
 }
 /* ============CARDS 1 ============ */
 #main{
